src/test/parse-fail/keywords-followed-by-double-colon.rs
// compile-flags: -Z parse-only

fn main() {
    struct::foo();
    //~^ ERROR expected identifier
}
fn bar() {
    mut::baz();
    //~^ ERROR expected expression, found keyword `mut`
}
